--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -10,6 +10,9 @@
   "author": "KateLu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.6"
   }
 }
