--- a/oj-client/angular.json
+++ b/oj-client/angular.json
@@ -28,7 +28,12 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/ace-builds/src-min-noconflict/ace.js",
+              "node_modules/ace-builds/src-min-noconflict/mode-java.js",
+              "node_modules/ace-builds/src-min-noconflict/mode-python.js",
+              "node_modules/ace-builds/src-min-noconflict/theme-eclipse.js"
+
             ]
           },
           "configurations": {
