--- a/oj-client/package.json
+++ b/oj-client/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "ace": "^1.3.0",
+    "ace-builds": "^1.4.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
