--- a/oj-client/package.json
+++ b/oj-client/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
+    "socket.io": "^2.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
