--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.7"
+    "mongoose": "^5.4.7",
+    "socket.io": "^2.2.0"
   }
 }
