--- a/oj-server/package.json
+++ b/oj-server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.7",
+    "node-rest-client": "^3.1.0",
     "redis": "^2.8.0",
     "socket.io": "^2.2.0"
   }
